Add explaination about Causal LLMs and Seq2Seq Architectures

--- a/Week-1/Lab_1_summarize_dialogue.ipynb
+++ b/Week-1/Lab_1_summarize_dialogue.ipynb
@@ -255,6 +255,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Read [Causal LLMs and Seq2Seq Architectures](https://heidloff.net/article/causal-llm-seq2seq/) to get a complete information about different ways to load models, i.e., Causal LLMs and Seq2Seq Architectures!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**AutoModelForSeq2SeqLM** can be used to load any seq2seq (or encoder-decoder) model that has a language modeling (LM) head on top. These include BART, PEGASUS, T5, etc. So when you do **AutoModelForSeq2SeqLM.from_pretrained(‘t5-base’)**, it will actually load a T5ForConditionalGeneration for you behind the scenes.\n",
+    "Also, intuitively, **AutoModelForSeq2SeqLM** is used for language models with **encoder-decoder architecture**, like T5 and BART, while **AutoModelForCausalLM** is used for auto-regressive language models like all the GPT models."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Load the [FLAN-T5 model](https://huggingface.co/docs/transformers/model_doc/flan-t5), creating an instance of the `AutoModelForSeq2SeqLM` class with the `.from_pretrained()` method. "
    ]
   },
@@ -281,7 +296,7 @@
    "source": [
     "To perform encoding and decoding, you need to work with text in a tokenized form. **Tokenization** is the process of splitting texts into smaller units that can be processed by the LLM models. \n",
     "\n",
-    "Download the tokenizer for the FLAN-T5 model using `AutoTokenizer.from_pretrained()` method. Parameter `use_fast` switches on fast tokenizer. At this stage, there is no need to go into the details of that, but you can find the tokenizer parameters in the [documentation](https://huggingface.co/docs/transformers/v4.28.1/en/model_doc/auto#transformers.AutoTokenizer)."
+    "Download the tokenizer for the FLAN-T5 model using `AutoTokenizer.from_pretrained()` method. **Parameter `use_fast`** switches on fast tokenizer. At this stage, there is no need to go into the details of that, but you can find the tokenizer parameters in the [documentation](https://huggingface.co/docs/transformers/v4.28.1/en/model_doc/auto#transformers.AutoTokenizer)."
    ]
   },
   {
@@ -303,6 +318,19 @@
    },
    "source": [
     "Test the tokenizer encoding and decoding a simple sentence:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "About parameters of tokenizer:\n",
+    "```\n",
+    "return_tensors (str or TensorType, optional) — If set, will return tensors instead of list of python integers. Acceptable values are:\n",
+    "'tf': Return TensorFlow tf.constant objects.\n",
+    "'pt': Return PyTorch torch.Tensor objects.\n",
+    "'np': Return Numpy np.ndarray objects.\n",
+    "```"
    ]
   },
   {
