Explaining different ways to load a model

--- a/Week-1/Lab_1_summarize_dialogue.ipynb
+++ b/Week-1/Lab_1_summarize_dialogue.ipynb
@@ -255,7 +255,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Read [Causal LLMs and Seq2Seq Architectures](https://heidloff.net/article/causal-llm-seq2seq/) to get a complete information about different ways to load models, i.e., Causal LLMs and Seq2Seq Architectures!"
+    "### Different ways of loading of a model\n",
+    "\n",
+    "When you instantiate one of the three models (AutoConfig, AutoModel, or AutoTokenizer) you will directly create a class corresponding to the relevant architecture.   \n",
+    "\n",
+    "1- AutoConfig:\n",
+    "Use AutoConfig when you need to customize the configuration parameters of a pre-trained model.\n",
+    "It allows you to modify settings such as the number of layers, hidden size, attention mechanism, etc.\n",
+    "You might use AutoConfig if you want to fine-tune a pre-trained model with specific architecture modifications.\n",
+    "```\n",
+    "from transformers import AutoConfig\n",
+    "# Example usage: Instantiate a BERT configuration\n",
+    "config = AutoConfig.from_pretrained(\"bert-base-uncased\")\n",
+    "```\n",
+    "2- AutoModel:\n",
+    "Use AutoModel when you want to load the architecture of a pre-trained model for further use in downstream tasks.\n",
+    "This class loads the pre-trained weights along with the architecture, allowing you to perform various tasks like fine-tuning, feature extraction, etc.\n",
+    "You might use AutoModel when you need to build a custom model architecture using pre-trained weights as a starting point.\n",
+    "```\n",
+    "from transformers import AutoModel\n",
+    "# Example usage: Instantiate a BERT model\n",
+    "model = AutoModel.from_pretrained(\"bert-base-uncased\")\n",
+    "```\n",
+    "3- AutoTokenizer:\n",
+    "Use AutoTokenizer when you need to tokenize input text for use with a pre-trained model.\n",
+    "Tokenization is the process of splitting input text into individual tokens or subwords that the model can process.\n",
+    "AutoTokenizer automatically selects the appropriate tokenizer for the specified pre-trained model.\n",
+    "You might use AutoTokenizer when preparing text data for input into a pre-trained model for tasks like classification, generation, etc.\n",
+    "```\n",
+    "from transformers import AutoTokenizer\n",
+    "# Example usage: Instantiate a BERT tokenizer\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"bert-base-uncased\")\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Read [Causal LLMs and Seq2Seq Architectures](https://heidloff.net/article/causal-llm-seq2seq/) to get a complete information about different models in LLM, i.e., Causal LLMs and Seq2Seq Architectures!\n",
+    "\n",
+    "1- Causal Language Modeling (CLM) - decoder\n",
+    "```\n",
+    "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
+    "model_id=\"gpt2\"\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"gpt2\")\n",
+    "model = AutoModelForCausalLM.from_pretrained(\"gpt2\")\n",
+    "```\n",
+    "\n",
+    "2- Masked Language Modeling (MLM) - encoder\n",
+    "```\n",
+    "from transformers import AutoTokenizer, AutoModelForMaskedLM\n",
+    "model_id=\"bert-base-uncased\"\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
+    "model = AutoModelForMaskedLM.from_pretrained(model_id)\n",
+    "```\n",
+    "\n",
+    "3- Sequence-to-Sequence (Seq2Seq) - encoder and decoder\n",
+    "\n",
+    "```\n",
+    "from transformers import AutoTokenizer, AutoModelForSeq2SeqLM\n",
+    "model_id=\"google/flan-t5-small\"\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
+    "model = AutoModelForSeq2SeqLM.from_pretrained(model_id)\n",
+    "```"
    ]
   },
   {
@@ -313,15 +376,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "Test the tokenizer encoding and decoding a simple sentence:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "About parameters of tokenizer:\n",
@@ -331,6 +385,13 @@
     "'pt': Return PyTorch torch.Tensor objects.\n",
     "'np': Return Numpy np.ndarray objects.\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Test the tokenizer encoding and decoding a simple sentence:"
    ]
   },
   {
