Adding name of transformer models

--- a/Week-1/Lab_1_summarize_dialogue.ipynb
+++ b/Week-1/Lab_1_summarize_dialogue.ipynb
@@ -255,7 +255,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Different ways of loading of a model\n",
+    "### [The Transformer Models](https://www.coursera.org/learn/generative-ai-with-llms/lecture/2T3Au/pre-training-large-language-models)    \n",
+    "There were three variance of the transformer model; **encoder-only, encoder-decoder models, and decode-only**. Each of these is trained on a different objective, and so learns how to carry out different tasks.\n",
+    "\n",
+    "1- **Encoder-only models**: these models are also known as **Autoencoding models**, and they are **pre-trained using masked language modeling**. Here, tokens in the input sequence or randomly mask, and the training objective is to predict the mask tokens in order to reconstruct the original sentence. This is also called a denoising objective. Autoencoding models spilled bi-directional representations of the input sequence, meaning that the model has an understanding of the full context of a token and not just of the words that come before. Encoder-only models are ideally suited to task that benefit from this bi-directional contexts. You can use them to carry out sentence classification tasks, for example, sentiment analysis or token-level tasks like named entity recognition or word classification. **Some well-known examples of an autoencoder model are BERT and RoBERTa**.\n",
+    "  \n",
+    "2- **Decoder-only models**: Now, let's take a look at decoder-only or **autoregressive models**, which are pre-trained using **causal language modeling**. Here, the training objective is to **predict the next token based on the previous sequence of tokens**. Predicting the next token is sometimes called full language modeling by researchers. Decoder-based autoregressive models, **mask the input sequence and can only see the input tokens leading up to the token in question**. The model has no knowledge of the end of the sentence. The model then iterates over the input sequence one by one to predict the following token. **In contrast to the encoder architecture, this means that the context is unidirectional**. By learning to predict the next token from a vast number of examples, the model builds up a statistical representation of language. Models of this type make use of the decoder component off the original architecture without the encoder. **Decoder-only models are often used for text generation**, although larger decoder-only models show strong zero-shot inference abilities, and can often perform a range of tasks well. Well known examples of decoder-based autoregressive models are **GBT and BLOOM**.\n",
+    "\n",
+    "3- **Encoder-Decoder models**: The final variation of the transformer model is **the sequence-to-sequence model** that uses both the encoder and decoder parts off the original transformer architecture. The exact details of the pre-training objective vary from model to model. **A popular sequence-to-sequence model T5**, pre-trains the encoder using span corruption, which masks random sequences of input tokens. Those mass sequences are then replaced with a unique Sentinel token, shown here as x. Sentinel tokens are special tokens added to the vocabulary, but do not correspond to any actual word from the input text. The decoder is then tasked with reconstructing the mask token sequences auto-regressively. The output is the Sentinel token followed by the predicted tokens. **You can use sequence-to-sequence models for translation, summarization, and question-answering**. They are generally useful in cases where you have a body of texts as both input and output. Besides T5, which you'll use in the labs in this course, another well-known encoder-decoder model is BART, not bird."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Three methods for loading a trained LLM model for utilization\n",
     "\n",
     "When you instantiate one of the three models (AutoConfig, AutoModel, or AutoTokenizer) you will directly create a class corresponding to the relevant architecture.   \n",
     "\n",
@@ -293,22 +307,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "## Exploring Three Methods for Loading AutoModel\n",
     "Read [Causal LLMs and Seq2Seq Architectures](https://heidloff.net/article/causal-llm-seq2seq/) to get a complete information about different models in LLM, i.e., Causal LLMs and Seq2Seq Architectures!\n",
     "\n",
-    "1- Causal Language Modeling (CLM) - decoder\n",
-    "```\n",
-    "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
-    "model_id=\"gpt2\"\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\"gpt2\")\n",
-    "model = AutoModelForCausalLM.from_pretrained(\"gpt2\")\n",
-    "```\n",
-    "\n",
-    "2- Masked Language Modeling (MLM) - encoder\n",
+    "1- Masked Language Modeling (MLM) - encoder\n",
     "```\n",
     "from transformers import AutoTokenizer, AutoModelForMaskedLM\n",
     "model_id=\"bert-base-uncased\"\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
     "model = AutoModelForMaskedLM.from_pretrained(model_id)\n",
+    "```\n",
+    "\n",
+    "2- Causal Language Modeling (CLM) - decoder\n",
+    "```\n",
+    "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
+    "model_id=\"gpt2\"\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"gpt2\")\n",
+    "model = AutoModelForCausalLM.from_pretrained(\"gpt2\")\n",
     "```\n",
     "\n",
     "3- Sequence-to-Sequence (Seq2Seq) - encoder and decoder\n",
